--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "please_ensure": "Please make sure the tokens you send are ",
     "wallet_address": "Wallet Address",
-    "time_remaining": "Time Reamaining",
+    "time_remaining": "Time Remaining",
     "cancel": "Cancel"
 }
