fix: lang + txid validation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,8 +5,7 @@
     "cancel": "Cancel",
     "remark1": "Please ensure that the wallet transfer is successfully completed before closing this page.",
     "remark2": "Complete the transfer before the countdown ends.",
-    "remark3": "After the deposit has been successfully transferred,",
-    "remark4": "please make sure to paste the transaction hash (TXID) and click “Submit.”",
+    "remark3": "After the deposit has been successfully transferred, please make sure to paste the transaction hash (TXID) and click “Submit.”",
     "note": "Note",
     "note1": "Reminder",
     "The txid field is required.": "The txid field is required.",
