--- a/public/locales/tw/translation.json
+++ b/public/locales/tw/translation.json
@@ -5,8 +5,7 @@
     "cancel": "取消",
     "remark1": "请务必完成钱包转账成功后才关闭此页面.",
     "remark2": "在倒数结束前完成转账.",
-    "remark3": "请在存款成功转账后,",
-    "remark4": "务必将交易哈希值 (TXID) 粘贴上并点击提交.",
+    "remark3": "请在存款成功转账后, 务必将交易哈希值 (TXID) 粘贴上并点击提交.",
     "note": "提示",
     "note1": "提示",
     "The txid field is required.": "交易ID必填",
