--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
     "Failed to fetch TRC-20 hash": "Failed to fetch TRC-20 hash",
     "Invalid or incomplete TRC-20 transaction": "Invalid or incomplete TRC-20 transaction",
     "Transaction updated successfully.": "Transaction updated successfully.",
-    "Invalid to wallet": "Invalid to wallet"
+    "Invalid to wallet": "Invalid to wallet",
+    "server_busy": "The cryptocurrency transfer system is currently busy. Please return later, refresh the deposit page, and try again."
 }
