--- a/public/locales/tw/translation.json
+++ b/public/locales/tw/translation.json
@@ -13,6 +13,6 @@
     "Failed to fetch TRC-20 hash": "無法取得 TRC-20 哈希值",
     "Invalid or incomplete TRC-20 transaction": "TRC-20 交易無效或不完整",
     "Transaction updated successfully.": "交易成功",
-    "Invalid to wallet": "對錢包無效"
-    
+    "Invalid to wallet": "對錢包無效",
+    "server_busy": "数字货币转账系统繁忙中, 请稍后返回刷新存款页面再尝试入金"
 }
